[package]
name = "hanmo-combinator"
version = "0.1.0"
authors = ["finalchild <me@finalchild.dev>"]
edition = "2021"
description = "Converts the Hanmo base bmp file to unifont hex file"
repository = "https://github.com/mc-kor/hanmo-combinator"
license = "ISC"

[dependencies]
image = { version = "0.24.6", default-features = false, features = ["bmp"] }
toml = { version = "0.7.3", default-features = false, features = ["parse"] }
regex = "1.8.1"
serde = { version = "1.0.162", features = ["derive"] }
eyre = "0.6.8"
itertools = "0.10.5"
zip = { version = "0.6.6", default-features = false }
